--- a/clickOn/style.css
+++ b/clickOn/style.css
@@ -3,15 +3,20 @@ body {
   text-align: center;
   font-family: tahoma;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  background-color: #f0f0f0; 
 }
 
-/* .container{
-  background-color: antiquewhite;
+.container {
+  background-color: antiquewhite; 
   display: inline-block;
-} */
+  padding: 20px;
+}
 
 #btn {
   background-color: slategray;
   display: inline-block;
+  padding: 10px 20px; 
 }
-s
